# SAFTsuperanc

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  SuperAncillaryHelper.hpp  bench.cpp  commons.hpp  evaluate.py  main.cpp  make_figures.py  make_headers.py  mystyle.mplstyle  plot.py  setup.py  test.cpp
.github/workflows/: cibuildwheel.yml
bld/: .gitignore  0PCSAFT_VLE_check_fitted_Nm16.json  0PCSAFT_VLE_check_worstcase_Nm16.json  1PCSAFT_VLE_check_fitted_Nm16.json  1PCSAFT_VLE_check_worstcase_Nm16.json  2PCSAFT_VLE_check_fitted_Nm16.json  2PCSAFT_VLE_check_worstcase_Nm16.json  3PCSAFT_VLE_check_fitted_Nm16.json  3PCSAFT_VLE_check_worstcase_Nm16.json  4PCSAFT_VLE_check_fitted_Nm16.json  4PCSAFT_VLE_check_worstcase_Nm16.json  5PCSAFT_VLE_check_fitted_Nm16.json  5PCSAFT_VLE_check_worstcase_Nm16.json  6PCSAFT_VLE_check_fitted_Nm16.json  6PCSAFT_VLE_check_worstcase_Nm16.json  7PCSAFT_VLE_check_fitted_Nm16.json  7PCSAFT_VLE_check_worstcase_Nm16.json  8PCSAFT_VLE_check_fitted_Nm16.json  8PCSAFT_VLE_check_worstcase_Nm16.json  9PCSAFT_VLE_check_fitted_Nm16.json  9PCSAFT_VLE_check_worstcase_Nm16.json  PCSAFT_VLE_m1.000000.json  PCSAFT_VLE_m1.000000000000e+00_expansions.json  PCSAFT_VLE_m1.000000_expansions.json  PCSAFT_VLE_m1.001183554746e+00_expansions.json  PCSAFT_VLE_m1.001184.json  PCSAFT_VLE_m1.004705.json  PCSAFT_VLE_m1.004705228315e+00_expansions.json  PCSAFT_VLE_m1.010477.json  PCSAFT_VLE_m1.010477202368e+00_expansions.json  PCSAFT_VLE_m1.018350.json  PCSAFT_VLE_m1.018350469387e+00_expansions.json  PCSAFT_VLE_m1.028111.json  PCSAFT_VLE_m1.028111495307e+00_expansions.json  PCSAFT_VLE_m1.039478820659e+00_expansions.json  PCSAFT_VLE_m1.039479.json  PCSAFT_VLE_m1.052100888480e+00_expansions.json  PCSAFT_VLE_m1.052101.json  PCSAFT_VLE_m1.065556711759e+00_expansions.json  PCSAFT_VLE_m1.065557.json  (+249 more)
implementation/: PCSAFTsuperancillary_crit.hpp  PCSAFTsuperancillary_data.hpp  PCSAFTsuperancillary_implementation.hpp  check_error.py  domain.cpp  interface.cpp  make_headers.py  pcsaftsuperancversion.hpp
output/: 0PCSAFT_VLE_check_fitted_Nm16.json  0PCSAFT_VLE_check_worstcase_Nm16.json  1PCSAFT_VLE_check_fitted_Nm16.json  1PCSAFT_VLE_check_worstcase_Nm16.json  2PCSAFT_VLE_check_fitted_Nm16.json  2PCSAFT_VLE_check_worstcase_Nm16.json  3PCSAFT_VLE_check_fitted_Nm16.json  3PCSAFT_VLE_check_worstcase_Nm16.json  4PCSAFT_VLE_check_fitted_Nm16.json  4PCSAFT_VLE_check_worstcase_Nm16.json  5PCSAFT_VLE_check_fitted_Nm16.json  5PCSAFT_VLE_check_worstcase_Nm16.json  6PCSAFT_VLE_check_fitted_Nm16.json  6PCSAFT_VLE_check_worstcase_Nm16.json  7PCSAFT_VLE_check_fitted_Nm16.json  7PCSAFT_VLE_check_worstcase_Nm16.json  8PCSAFT_VLE_check_fitted_Nm16.json  8PCSAFT_VLE_check_worstcase_Nm16.json  9PCSAFT_VLE_check_fitted_Nm16.json  9PCSAFT_VLE_check_worstcase_Nm16.json  PCSAFT_VLE_m1.000000.json  PCSAFT_VLE_m1.000000000000e+00_expansions.json  PCSAFT_VLE_m1.002369914416e+00_expansions.json  PCSAFT_VLE_m1.002370.json  PCSAFT_VLE_m1.004751.json  PCSAFT_VLE_m1.004751088504e+00_expansions.json  PCSAFT_VLE_m1.009454944303e+00_expansions.json  PCSAFT_VLE_m1.009455.json  PCSAFT_VLE_m1.009547538208e+00_expansions.json  PCSAFT_VLE_m1.009548.json  PCSAFT_VLE_m1.014470918439e+01_expansions.json  PCSAFT_VLE_m1.019090.json  PCSAFT_VLE_m1.019090387153e+00_expansions.json  PCSAFT_VLE_m1.021176.json  PCSAFT_VLE_m1.021176272831e+00_expansions.json  PCSAFT_VLE_m1.037387.json  PCSAFT_VLE_m1.037387007918e+00_expansions.json  PCSAFT_VLE_m1.038923845587e+00_expansions.json  PCSAFT_VLE_m1.038924.json  PCSAFT_VLE_m1.040169730958e+01_expansions.json  (+565 more)
